--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,6 +22,7 @@
   font-size: 32px;
   line-height: 32px;
   text-align: left;
+  font-weight: 500;
 }
 .profile__discription {
   margin: 0;
@@ -33,11 +34,13 @@
   margin-top: auto;
   border: none;
   background-color: #fcf5e5;
-  width: 107.34px;
-  height: 16px;
+  /*width: 107.34px;
+  height: 16px;*/
   gap: 8px;
   border-radius: 90px;
   opacity: 0.7px;
+  font-weight: 500;
+  text-align: left;
 }
 
 .profile__add-btn {
@@ -48,8 +51,9 @@
   font-family: Poppins;
 
   text-align: left;
-  width: 149px;
-  height: 52px;
+  /*width: 149px;
+  height: 52px;*/
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
+  font-weight: 500;
 }
