--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,9 +1,6 @@
-.card {
-  max-width: 413px;
-}
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   border-radius: 10px;
   display: block;
@@ -27,4 +24,9 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
+}
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
 }
