--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,4 +29,11 @@
   .card__image {
     height: 288px;
   }
+  .card__title {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    margin: 12px 0;
+  }
 }
