--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 24px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 .cards__list {
   list-style-type: none;
@@ -11,7 +13,11 @@
   gap: 40px 20px;
 }
 @media screen and (max-width: 627px) {
+  .cards {
+    padding-bottom: 2px;
+  }
   .cards__lis {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
   }
 }
