--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,6 @@
 .cards {
   padding-top: 20px;
-  padding-bottom: 24px;
-  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  padding-bottom: 40px;
 }
 .cards__list {
   list-style-type: none;
@@ -14,9 +13,9 @@
 }
 @media screen and (max-width: 627px) {
   .cards {
-    padding-bottom: 2px;
+    padding-bottom: 20px;
   }
-  .cards__lis {
+  .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
     gap: 20px;
   }
