--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,6 +7,7 @@
   font-family: Poppins;
   color: #212121b2;
   opacity: 0.7px;
+  border-top: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .footer__copyright {
