--- a/blocks/card.css
+++ b/blocks/card.css
@@ -11,6 +11,9 @@
   font-weight: 500;
   line-height: 24px;
   margin: 12px 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .card__content {
   display: flex;
