--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,12 +23,22 @@
   line-height: 32px;
   text-align: left;
   font-weight: 500;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 .profile__discription {
   margin: 0;
   font-size: 16px;
   line-height: 16px;
   text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__edit-btn {
