--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,18 +2,20 @@
   height: 413px;
   width: 100%;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 8px;
   display: block;
+  margin-bottom: 12px;
 }
 .card__title {
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
-  margin: 12px 0;
+  margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 350px;
 }
 .card__content {
   display: flex;
@@ -27,6 +29,10 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
+  cursor: pointer;
+}
+.card__like-btn:hover {
+  opacity: 100%;
 }
 @media screen and (max-width: 627px) {
   .card__image {
@@ -35,5 +41,6 @@
   .card__title {
     font-size: 16px;
     line-height: 16px;
+    max-width: 250px;
   }
 }
