--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -4,7 +4,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   color: #212121b2;
   opacity: 0.7px;
   border-top: 1px rgba(33, 33, 33, 0.4) solid;
