--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,19 +5,20 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 16px;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 .profile__avatar {
   margin-right: 20px;
   width: 190px;
   height: 190px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 .profile__column {
   display: flex;
   flex-direction: column;
 }
 .profile__name {
+  color: #212121;
   margin: 0 0 12px;
   font-size: 32px;
   line-height: 32px;
@@ -31,6 +32,7 @@
   max-width: 420px;
 }
 .profile__description {
+  color: #212121b2;
   margin: 0;
   font-size: 16px;
   line-height: 16px;
@@ -44,6 +46,7 @@
 }
 
 .profile__edit-btn {
+  color: #212121;
   margin-top: auto;
   border: none;
   background-color: #fcf5e5;
@@ -51,9 +54,13 @@
   height: 16px;*/
   gap: 8px;
   border-radius: 90px;
-  opacity: 0.7px;
+  opacity: 0.7;
   font-weight: 500;
   text-align: left;
+  cursor: pointer;
+}
+.profile__edit-btn:hover {
+  opacity: 1;
 }
 
 .profile__add-btn {
@@ -61,7 +68,7 @@
   margin-left: auto;
   background-color: #000;
   color: #fcf5e5;
-  font-family: Poppins;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 
   text-align: left;
   /*width: 149px;
@@ -69,6 +76,11 @@
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   font-weight: 500;
+  opacity: 1;
+  cursor: pointer;
+}
+.profile__add-btn:hover {
+  opacity: 0.8;
 }
 @media screen and (max-width: 627px) {
   .profile {
