--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -50,9 +50,9 @@
   margin-top: auto;
   border: none;
   background-color: #fcf5e5;
-  /*width: 107.34px;
-  height: 16px;*/
-  gap: 8px;
+  width: 107.34px;
+  height: 16px;
+  gap: 12px;
   border-radius: 90px;
   opacity: 0.7;
   font-weight: 500;
@@ -71,8 +71,8 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
 
   text-align: left;
-  /*width: 149px;
-  height: 52px;*/
+  width: 149px;
+  height: 52px;
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   font-weight: 500;
@@ -100,9 +100,13 @@
     margin: 0;
     width: 100%;
     text-align: center;
+
+    width: 288px;
+    height: 52px;
   }
   .profile__edit-btn {
     text-align: center;
+    gap: 32px;
   }
   .profile__name {
     font-size: 20px;
@@ -117,5 +121,6 @@
     margin: 0 0 32px;
     text-align: center;
     max-width: 288px;
+    justify-content: center;
   }
 }
