--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -50,8 +50,8 @@
   margin-top: auto;
   border: none;
   background-color: #fcf5e5;
-  width: 107.34px;
-  height: 16px;
+  /* width: 107.34px;
+  height: 16px;*/
   gap: 12px;
   border-radius: 90px;
   opacity: 0.7;
@@ -71,8 +71,8 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
 
   text-align: left;
-  width: 149px;
-  height: 52px;
+  /*width: 149px;
+  height: 52px;*/
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   font-weight: 500;
@@ -97,8 +97,8 @@
     margin: 0 0 12px;
   }
   .profile__add-btn {
-    margin: 0;
-    width: 100%;
+    margin: 0 auto;
+
     text-align: center;
 
     width: 288px;
@@ -106,7 +106,6 @@
   }
   .profile__edit-btn {
     text-align: center;
-    gap: 32px;
   }
   .profile__name {
     font-size: 20px;
@@ -118,9 +117,8 @@
     margin: 0 0 20px;
   }
   .profile__discription {
-    margin: 0 0 32px;
+    margin: 0 auto 32px;
     text-align: center;
     max-width: 288px;
-    justify-content: center;
   }
 }
