--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -69,15 +69,17 @@
   background-color: #000;
   color: #fcf5e5;
   font-family: Poppins, Arial, Helvetica, sans-serif;
-
   text-align: left;
-  /*width: 149px;
-  height: 52px;*/
   padding: 18px 32px 18px 32px;
   border-radius: 8px;
   font-weight: 500;
   opacity: 1;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  gap: 10px;
   cursor: pointer;
+  flex-shrink: 0;
 }
 .profile__add-btn:hover {
   opacity: 0.8;
@@ -88,7 +90,7 @@
     max-width: 288px;
     align-items: center;
     text-align: center;
-    padding: 20px;
+    padding-top: 20px;
   }
   .profile__avatar {
     margin-right: 0;
@@ -116,7 +118,7 @@
   .profile__column {
     margin: 0 0 20px;
   }
-  .profile__discription {
+  .profile__description {
     margin: 0 auto 32px;
     text-align: center;
     max-width: 288px;
