--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,12 +9,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
+  /* visibility: hidden; */
+  padding: 0 16px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
 }
 .modal_opened {
   visibility: visible;
 }
-.modal__cotainer {
+.modal__container {
   background: #fff;
   padding: 32px 50px;
   max-width: 730px;
@@ -29,9 +32,20 @@
   right: 50px;
   width: 40px;
   height: 40px;
+  border: none;
+  background-image: url(../images/Close\ Icon.svg);
+  background-color: #fff;
 }
 .modal__title {
   margin: 0 0 32px;
+  font-size: 32px;
+  line-height: 32px;
+  text-align: left;
+}
+.modal__form {
+  color: #212121b2;
+  font-size: 16px;
+  line-height: 17.5px;
 }
 .modal__label {
   display: flex;
@@ -41,8 +55,39 @@
 }
 .modal__input {
   padding: 16px 12px;
+  border-radius: 8px;
+  border: 1px solid #21212166;
+  font-size: 20px;
+  line-height: 20px;
 }
 .modal__submit-btn {
-  width: 156;
+  width: 156px;
   padding: 18px 0;
+  background-color: black;
+  color: #fff;
+  border-radius: 8px;
+  font-size: 16px;
+  line-height: 16px;
+}
+@media screen and (max-width: 627px) {
+  .modal {
+    padding: 0 10px;
+  }
+  .modal__container {
+    padding: 12px;
+  }
+  .modal__title {
+    font-size: 20px;
+    margin: 10px 0 34px;
+  }
+  .modal__close-btn {
+    top: 12px;
+    right: 12px;
+  }
+  .modal__label {
+    margin-bottom: 24px;
+  }
+  .modal__submit-btn {
+    width: 100%;
+  }
 }
