--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* visibility: hidden; */
+  visibility: hidden;
   padding: 0 16px;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
