--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -35,6 +35,11 @@
   border: none;
   background-image: url(../images/Close\ Icon.svg);
   background-color: #fff;
+  cursor: pointer;
+  opacity: 40%;
+}
+.modal__close-btn:hover {
+  opacity: 100%;
 }
 .modal__title {
   margin: 0 0 32px;
@@ -59,6 +64,10 @@
   border: 1px solid #21212166;
   font-size: 20px;
   line-height: 20px;
+  opacity: 40%;
+}
+.modal__input:hover {
+  opacity: 100%;
 }
 .modal__submit-btn {
   width: 156px;
@@ -68,7 +77,13 @@
   border-radius: 8px;
   font-size: 16px;
   line-height: 16px;
+  cursor: pointer;
+  opacity: 100%;
 }
+.modal__submit-btn:hover {
+  opacity: 40%;
+}
+
 @media screen and (max-width: 627px) {
   .modal {
     padding: 0 10px;
