--- a/blocks/card.css
+++ b/blocks/card.css
@@ -34,7 +34,34 @@
 .card__like-btn:hover {
   opacity: 100%;
 }
+.card__like-btn_liked {
+  background-image: url(../images/like-image-liked.svg);
+  opacity: 100%;
+}
+.card__like-btn_liked:hover {
+  background-image: url(../images/like-image-liked-hover.svg);
+  opacity: 40%;
+}
+.card__image-wrapper {
+  position: relative;
+  /*display: inline-block;*/
+}
+.card__delete-btn {
+  background-image: url(../images/delete-default.png);
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  left: 371px;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
 
+.card__delete-btn:hover {
+  background-image: url(../images/delete-hover.png);
+}
 @media screen and (max-width: 627px) {
   .card__image {
     height: 288px;
