--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -19,26 +19,62 @@
 }
 .modal__container {
   background: #fff;
-  padding: 32px 50px;
+  padding: 36px 50px 32px;
   max-width: 730px;
   width: 100%;
   box-sizing: border-box;
   position: relative;
   border-radius: 20px;
 }
-.modal__close-btn {
+.modal__container_type_preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  background-color: transparent;
+  padding: 0;
+  border-radius: 20px;
+}
+.modal__image {
+  width: 100%;
+  max-height: 80vh;
+  max-width: 80vw;
+  object-fit: contain;
+}
+.modal__caption {
+  color: #fff;
+  background: #212121;
+  box-sizing: border-box;
+  width: 119;
+  height: 24;
+
+  border-radius: 8px;
+  padding: 4px 8px;
+}
+
+.modal__close {
   position: absolute;
   top: 32px;
   right: 50px;
   width: 40px;
   height: 40px;
+  padding: 0;
+  margin: 0;
   border: none;
   background-image: url(../images/Close\ Icon.svg);
   background-color: #fff;
   cursor: pointer;
   opacity: 40%;
 }
-.modal__close-btn:hover {
+.modal__close_type_preview {
+  background-color: transparent;
+  background-image: url(../images/close-modal-preview.svg);
+  top: 0;
+  right: -12px;
+  opacity: 1;
+}
+.modal__close:hover {
   opacity: 100%;
 }
 .modal__title {
@@ -95,7 +131,7 @@
     font-size: 20px;
     margin: 10px 0 34px;
   }
-  .modal__close-btn {
+  .modal__close {
     top: 12px;
     right: 12px;
   }
