--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,10 +13,12 @@
   padding: 0 16px;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
-  transition: visibility 0.3s, opacity 0.3s ease-in;
+  transition: visibility 0.3s, opacity 0.3sease-in;
+  opacity: 0;
 }
 .modal_opened {
   visibility: visible;
+  opacity: 1;
 }
 .modal__container {
   background: #fff;
@@ -27,25 +29,29 @@
   position: relative;
   border-radius: 20px;
 }
-.modal__container_type_preview {
+/* .modal__container_type_preview {
   background-color: transparent;
   padding: 0;
   border-radius: 20px;
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: flex-start; /* Aligns items to the left */
+  align-items: flex-start;
   width: auto;
   max-width: 80vw;
+} */
+
+.modal__image-container {
+  position: relative;
 }
 
 .modal__image {
-  width: 100%; /* Makes the image take full width of container */
-  max-width: 80vw; /* Restricts the width for responsiveness */
+  /* width: 100%; */
+  max-width: 80vw;
   max-height: 80vh;
   object-fit: contain;
   border-radius: 20px;
-  /* position: relative;*/
+  /* position: relative; */
   margin: 0 auto;
 }
 
@@ -53,14 +59,15 @@
   color: #fff;
   background: #212121;
   box-sizing: border-box;
-  /*width: 100%; /* Matches the image width */
-  max-width: 80vw; /* Same max-width as the image */
+  /* max-width: 80vw; */
   border-radius: 8px;
   padding: 4px 8px;
-  margin-top: 8px;
-  text-align: left;
-  width: auto; /* Fits exactly to the text */
-  display: inline-block; /* Shrinks to fit content */
+  /* margin-top: 8px;*/
+  /* text-align: left; */
+  /* width: auto; */
+  /*display: inline-block;*/
+  display: table;
+  margin: 8px 0 0 0;
 }
 
 .modal__close {
@@ -159,7 +166,7 @@
     width: 100%;
   }
   .modal__close_type_preview {
-    top: 41px;
-    right: 12.5px;
+    top: -48px;
+    right: 0;
   }
 }
