--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -68,6 +68,9 @@
   /*display: inline-block;*/
   display: table;
   margin: 8px 0 0 0;
+  font-size: 20px;
+  line-height: 24px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
 .modal__close {
@@ -173,4 +176,7 @@
     border-radius: 4px;
     width: 100%;
   }
+  .modal__caption {
+    font-size: 16;
+    line-height: 19.2px;
 }
