--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -174,10 +174,16 @@
   }
   .modal__image {
     border-radius: 4px;
-    width: 100%;
   }
   .modal__caption {
     font-size: 16px;
     line-height: 19.2px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .modal__image {
+    max-width: 100%;
+    width: 288px;
   }
 }
