--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -132,6 +132,15 @@
 .modal__input:hover {
   opacity: 100%;
 }
+.modal__error {
+  display: block;
+  color: #ff0000b2;
+  font-family: Poppins;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 110.00000000000001%;
+  letter-spacing: 0%;
+}
 .modal__submit-btn {
   width: 156px;
   padding: 18px 0;
