--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -124,13 +124,22 @@
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
-  border: 1px solid #21212166;
+  border: 1px solid rgba(33, 33, 33, 0.4);
   font-size: 20px;
   line-height: 20px;
   opacity: 40%;
+  color: #212121;
+}
+.modal__input::placeholder {
+  color: #212121;
+  opacity: 30%;
 }
 .modal__input:hover {
   opacity: 100%;
+  border: 1px solid rgba(33, 33, 33);
+}
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
 }
 .modal__error {
   display: block;
@@ -151,6 +160,9 @@
   line-height: 16px;
   cursor: pointer;
   opacity: 100%;
+}
+.btn_inactive {
+  opacity: 40%;
 }
 .modal__submit-btn:hover {
   opacity: 40%;
