--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -130,6 +130,7 @@
   opacity: 40%;
   color: #212121;
 }
+
 .modal__input::placeholder {
   color: #212121;
   opacity: 30%;
@@ -141,6 +142,7 @@
 .modal__input_type_error {
   border: 1px solid rgba(255, 0, 0, 0.6);
 }
+
 .modal__error {
   display: block;
   color: #ff0000b2;
@@ -161,11 +163,12 @@
   cursor: pointer;
   opacity: 100%;
 }
-.btn_inactive {
-  opacity: 40%;
-}
 .modal__submit-btn:hover {
-  opacity: 40%;
+  opacity: 80%;
+}
+.modal__submit-btn_inactive {
+  opacity: 50%;
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 627px) {
