--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -82,7 +82,7 @@
   padding: 0;
   margin: 0;
   border: none;
-  background-image: url(../images/Close\ Icon.svg);
+  background-image: url(../images/Close-Icon.svg);
   background-color: #fff;
   cursor: pointer;
   opacity: 40%;
