--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -8,7 +8,6 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 .profile__avatar {
-  margin-right: 20px;
   width: 190px;
   height: 190px;
   border-radius: 8px;
@@ -84,6 +83,28 @@
 .profile__add-btn:hover {
   opacity: 0.8;
 }
+.profile__avatar-container {
+  position: relative;
+  margin-right: 20px;
+}
+.profile__avatar-btn {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  visibility: hidden;
+  border-radius: 8px;
+  border: none;
+  background-color: rgba(164, 164, 164, 0.5);
+}
+.profile__avatar-container:hover .profile__avatar-btn {
+  visibility: visible;
+}
+.profile__avatar-btn::after {
+  content: " Edit avatar";
+}
 @media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
@@ -97,6 +118,12 @@
     height: 80px;
     width: 80px;
     margin: 0 0 12px;
+  }
+  .profile__avatar-btn {
+    visibility: visible;
+  }
+  .profile__avatar-btn::after {
+    content: " ";
   }
   .profile__add-btn {
     margin: 0 auto;
